--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="column">
                 <div class="right">
                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/josephkrysko/">
-                    <img src="/images/linkedinlo0go.png" width="50" height="50"> 
+                    <img src="images/linkedinlo0go.png" width="50" height="50"> 
                  </a>
                  <a href="page2.html">
-                    <img src="/images/docs.png" width="50" height="50"> 
+                    <img src="images/docs.png" width="50" height="50"> 
                  </a>
                 </div>
 
@@ -65,9 +65,9 @@
         <div class="slider" style="padding-top: 50px;">
 
             <div class="slides">
-                <img class="slide" src="/images/Untitled_Artwork 1.jpg" alt="Image #1">
-                <img class="slide" src="/images/Untitled_Artwork 2.jpg" alt="Image #2">
-                <img class="slide" src="/images/Untitled_Artwork 3.jpg" alt="Image #3">
+                <img class="slide" src="images/Untitled_Artwork 1.jpg" alt="Image #1">
+                <img class="slide" src="images/Untitled_Artwork 2.jpg" alt="Image #2">
+                <img class="slide" src="images/Untitled_Artwork 3.jpg" alt="Image #3">
             </div>
 
             <button class="prev" onclick="prevSlide()">&#10094</button>
