--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
 
 <body>
     <a href="index.html">
-        <img src="/images/button.png" style="width: 50px;">
+        <img src="images/button.png" style="width: 50px;">
     </a>
-    <img src="/images/resume.jpg" style="width: 100%;">
+    <img src="images/resume.jpg" style="width: 100%;">
 </body>
