--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="column">
                 <div class="right">
                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/josephkrysko/">
-                    <img src="images/linkedinlo0go.png" width="50" height="50"> 
+                    <img src="linkedinlo0go.png" width="50" height="50"> 
                  </a>
                  <a href="https://docs.google.com/document/d/1AtEZ1ds_6OJjzg0jkgqEYahrTPUzdTSKHEvVzq6yO-s/edit?usp=sharing">
-                    <img src="images/docs.png" width="50" height="50"> 
+                    <img src="docs.png" width="50" height="50"> 
                  </a>
                 </div>
 
@@ -77,7 +77,7 @@
             <div class="column">
 
                 <div class="portrait">
-                    <img src = "images/portrait.JPG">
+                    <img src = "portrait.JPG">
                 </div>
 
             </div>
@@ -111,9 +111,9 @@
             <div class="slider" style="padding-top: 50px;">
     
                 <div class="slides">
-                    <img class="slide" src="images/Untitled_Artwork 1.jpg" alt="Image #1">
-                    <img class="slide" src="images/Untitled_Artwork 2.jpg" alt="Image #2">
-                    <img class="slide" src="images/Untitled_Artwork 3.jpg" alt="Image #3">
+                    <img class="slide" src="Untitled_Artwork 1.jpg" alt="Image #1">
+                    <img class="slide" src="Untitled_Artwork 2.jpg" alt="Image #2">
+                    <img class="slide" src="Untitled_Artwork 3.jpg" alt="Image #3">
                 </div>
     
                 <button class="prev" onclick="prevSlide()">&#10094</button>
@@ -158,7 +158,7 @@
 
 <hr>
 <div class="bottom">
-    <img src="images/Untitled_Artwork.png" style="height: 125px;">
+    <img src="Untitled_Artwork.png" style="height: 125px;">
 
 
 </div>
